update root repo

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "reset": "npm run cleanup && rimraf -rf node_modules && npm run bootstrap",
     "test": "lerna run test",
     "test:key-derivation": "lerna run --scope @s1seven/js-bigchain-key-derivation test",
+    "test:plugins": "lerna run --scope @s1seven/js-bigchain-wallet-plugins test",
     "build": "npm run cleanup && lerna run compile",
     "cleanup": "lerna run cleanup --stream --parallel",
     "lint": "lerna run lint",
