--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,12 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "independent"
+  "packages": ["packages/*"],
+  "npmClient": "npm",
+  "version": "independent",
+  "command": {
+    "publish": {
+      "ignoreChanges": ["**/package-lock.json", "*.md", "**/*.spec.ts"],
+      "conventionalCommits": true,
+      "message": "chore(release): publish"
+    }
+  }
 }
