--- a/packages/key-derivation/package.json
+++ b/packages/key-derivation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@s1seven/js-bigchain-key-derivation",
+  "name": "@s1seven/js-bigchaindb-key-derivation",
   "version": "0.0.0",
   "description": "Key derivation for BigChainDB",
   "keywords": [
@@ -10,11 +10,19 @@
   "author": "getlarge <ed@getlarge.eu>",
   "homepage": "",
   "license": "ISC",
-  "main": "dist/index.js",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "publicConfig": {
+    "access": "public"
+  },
+  "types": "dist/index",
+  "main": "dist/index",
+  "browser": "dist/index",
   "directories": {
     "src": "src",
     "lib": "dist",
-    "test": "__tests__"
+    "test": "test"
   },
   "files": [
     "dist"
