--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -34,5 +34,6 @@
   "devDependencies": {
     "rimraf": "~3.0.2",
     "typescript": "4.0.2"
-  }
+  },
+  "gitHead": "d2545b2483b5cd2ce16175947a55f66c51c42690"
 }
