--- a/packages/key-derivation/package.json
+++ b/packages/key-derivation/package.json
@@ -49,5 +49,6 @@
     "ed2curve": "^0.3.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1"
-  }
+  },
+  "gitHead": "d2545b2483b5cd2ce16175947a55f66c51c42690"
 }
