--- a/jest.config.json
+++ b/jest.config.json
@@ -3,6 +3,7 @@
   "collectCoverage": true,
   "coverageReporters": ["lcov", "json"],
   "collectCoverageFrom": ["**/src/**", "!**/test/**"],
+  "maxConcurrency": 2,
   "reporters": ["default", "jest-junit"],
   "testResultsProcessor": "jest-junit",
   "transform": {
