--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "root",
   "private": true,
+  "license": "Apache-2.0",
   "homepage": "https://github.com/s1seven/js-bigchaindb-wallets#readme",
   "repository": {
     "type": "git",
@@ -35,25 +36,25 @@
   "devDependencies": {
     "@lerna/publish": "3.22.1",
     "@lerna/run": "3.21.0",
-    "@types/jest": "26.0.12",
-    "@types/node": "14.0.27",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "26.4.2",
+    "@types/jest": "26.0.19",
+    "@types/node": "^14.14.16",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "jest": "^26.6.3",
     "jest-junit": "11.1.0",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.1",
     "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
-    "prettier": "2.1.1",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "26.3.0",
-    "ts-node": "9.0.0",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "3.9.0",
-    "typescript": "4.0.2"
+    "typescript": "^4.1.3"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
