--- a/packages/jwt/package.json
+++ b/packages/jwt/package.json
@@ -7,9 +7,9 @@
     "ed25519",
     "jwt"
   ],
+  "license": "Apache-2.0",
   "author": "getlarge <ed@getlarge.eu>",
-  "homepage": "",
-  "license": "ISC",
+  "homepage": "https://github.com/s1seven/js-bigchaindb-wallets#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@s1seven/js-bigchaindb-wallet-plugins": "^0.0.2",
     "rimraf": "~3.0.2",
-    "typescript": "4.0.2"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "@s1seven/js-bigchaindb-key-derivation": "^0.0.2",
