--- a/packages/key-derivation/package.json
+++ b/packages/key-derivation/package.json
@@ -7,9 +7,9 @@
     "ed25519",
     "keys"
   ],
+  "license": "Apache-2.0",
   "author": "getlarge <ed@getlarge.eu>",
-  "homepage": "",
-  "license": "ISC",
+  "homepage": "https://github.com/s1seven/js-bigchaindb-wallets#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -37,9 +37,9 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "eslint": "^7.11.0",
+    "eslint": "^7.16.0",
     "rimraf": "~3.0.2",
-    "typescript": "4.0.2"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "bip39": "^3.0.3",
