--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -7,9 +7,9 @@
     "cipher",
     "keys"
   ],
+  "license": "Apache-2.0",
   "author": "getlarge <ed@getlarge.eu>",
-  "homepage": "",
-  "license": "ISC",
+  "homepage": "https://github.com/s1seven/js-bigchaindb-wallets#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "rimraf": "~3.0.2",
-    "typescript": "4.0.2"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "@s1seven/js-bigchaindb-wallet-types": "^0.0.2",
