--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,9 +2,9 @@
   "name": "@s1seven/js-bigchaindb-wallet-types",
   "version": "0.0.2",
   "description": "Shared types",
+  "license": "Apache-2.0",
   "author": "getlarge <ed@getlarge.eu>",
-  "homepage": "",
-  "license": "ISC",
+  "homepage": "https://github.com/s1seven/js-bigchaindb-wallets#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "rimraf": "~3.0.2",
-    "typescript": "4.0.2"
+    "typescript": "^4.1.3"
   },
   "gitHead": "d2545b2483b5cd2ce16175947a55f66c51c42690"
 }
