--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -41,7 +41,12 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@s1seven/js-bigchaindb-key-derivation": "^0.0.5",
     "@s1seven/js-bigchaindb-wallet-types": "^0.0.3",
+    "@types/lru-cache": "^5.1.0",
+    "bs58": "^4.0.1",
+    "lru-cache": "^6.0.0",
+    "security-context": "^4.0.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1"
   },
