fix: npm publish issue
Signed-off-by: getlarge <ed@getlarge.eu>

--- a/packages/key-derivation/package.json
+++ b/packages/key-derivation/package.json
@@ -11,6 +11,7 @@
   "author": "getlarge <ed@getlarge.eu>",
   "homepage": "https://github.com/bigchaindb/js-bigchaindb-wallets#readme",
   "publishConfig": {
+    "cache": "~/.npm",
     "registry": "https://registry.npmjs.org/"
   },
   "publicConfig": {
@@ -48,5 +49,5 @@
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1"
   },
-  "gitHead": "b16cc42e43fe9130f2f5b06efd22cb660a155423"
+  "gitHead": "d9d4d11ee7298113013dcb2895fc2160dc371837"
 }
