fix: npm publish issue
Signed-off-by: getlarge <ed@getlarge.eu>

--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -11,6 +11,7 @@
   "author": "getlarge <ed@getlarge.eu>",
   "homepage": "https://github.com/bigchaindb/js-bigchaindb-wallets#readme",
   "publishConfig": {
+    "cache": "~/.npm",
     "registry": "https://registry.npmjs.org/"
   },
   "publicConfig": {
@@ -50,5 +51,5 @@
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1"
   },
-  "gitHead": "d2545b2483b5cd2ce16175947a55f66c51c42690"
+  "gitHead": "d9d4d11ee7298113013dcb2895fc2160dc371837"
 }
