fix: shorten package name
Signed-off-by: getlarge <ed@getlarge.eu>

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "format": "prettier --write \"packages/**/*.{ts,json}\"",
     "reset": "npm run cleanup && rimraf -rf node_modules && npm run bootstrap",
     "test": "lerna run test",
-    "test:key-derivation": "lerna run --scope @s1seven/js-bigchaindb-key-derivation test",
-    "test:plugins": "lerna run --scope @s1seven/js-bigchaindb-wallet-plugins test",
-    "test:jwt": "lerna run --scope @s1seven/js-bigchaindb-wallet-jwt test",
+    "test:key-derivation": "lerna run --scope @bigchaindb/wallet-hd test",
+    "test:plugins": "lerna run --scope @bigchaindb/wallet-plugins test",
+    "test:jwt": "lerna run --scope @bigchaindb/jwt test",
     "build": "npm run cleanup && lerna run compile",
     "cleanup": "lerna run cleanup --stream --parallel",
     "lint": "lerna run lint",
