--- a/packages/jwt/package.json
+++ b/packages/jwt/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bigchaindb/js-bigchaindb-wallet-jwt",
+  "name": "@bigchaindb/jwt",
   "version": "0.0.14",
   "description": "JWT tool for BigChainDB wallet",
   "keywords": [
@@ -38,13 +38,13 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@bigchaindb/js-bigchaindb-wallet-plugins": "^0.3.1",
+    "@bigchaindb/wallet-plugins": "^0.3.1",
     "rimraf": "~3.0.2",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@bigchaindb/js-bigchaindb-key-derivation": "^0.3.1",
-    "@bigchaindb/js-bigchaindb-wallet-types": "^0.0.5",
+    "@bigchaindb/wallet-hd": "^0.3.1",
+    "@bigchaindb/wallet-types": "^0.0.5",
     "jwt-ed25519-tn": "git+https://github.com/getlarge/jsonwebtoken-ed25519-tn.git"
   },
   "gitHead": "d9d4d11ee7298113013dcb2895fc2160dc371837"
