--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bigchaindb/js-bigchaindb-wallet-plugins",
+  "name": "@bigchaindb/wallet-plugins",
   "version": "0.3.1",
   "description": "Plugins for BigChainDB wallet",
   "keywords": [
@@ -42,8 +42,8 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@bigchaindb/js-bigchaindb-key-derivation": "^0.3.1",
-    "@bigchaindb/js-bigchaindb-wallet-types": "^0.0.5",
+    "@bigchaindb/wallet-hd": "^0.3.1",
+    "@bigchaindb/wallet-types": "^0.0.5",
     "@types/lru-cache": "^5.1.0",
     "bs58": "^4.0.1",
     "lru-cache": "^6.0.0",
