fix: shorten package name
Signed-off-by: getlarge <ed@getlarge.eu>

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bigchaindb/js-bigchaindb-wallet-types",
+  "name": "@bigchaindb/wallet-types",
   "version": "0.0.5",
   "description": "Shared types",
   "license": "Apache-2.0",
