--- a/packages/key-derivation/package.json
+++ b/packages/key-derivation/package.json
@@ -38,9 +38,7 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "eslint": "^7.16.0",
-    "rimraf": "~3.0.2",
-    "typescript": "^4.3.2"
+    "rimraf": "~3.0.2"
   },
   "dependencies": {
     "bip39": "^3.0.4",
