--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -33,8 +33,7 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "rimraf": "~3.0.2",
-    "typescript": "^4.1.3"
+    "rimraf": "~3.0.2"
   },
   "gitHead": "d9d4d11ee7298113013dcb2895fc2160dc371837"
 }
