test: improve jest global setup

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:key-derivation": "lerna run --scope @bigchaindb/wallet-hd test",
     "test:plugins": "lerna run --scope @bigchaindb/wallet-plugins test",
     "test:jwt": "lerna run --scope @bigchaindb/jwt test",
+    "test:cov": "lerna run test:cov && node merge-coverage.js",
     "build": "npm run cleanup && lerna run compile",
     "cleanup": "lerna run cleanup --stream --parallel",
     "lint": "lerna run lint",
@@ -42,6 +43,9 @@
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "istanbul-lib-coverage": "^3.2.0",
+    "istanbul-lib-report": "^3.0.0",
+    "istanbul-reports": "^3.1.4",
     "jest": "^27.5.1",
     "jest-junit": "13.0.0",
     "lerna": "^4.0.0",
