--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -29,7 +29,8 @@
     "cleanup": "rimraf -rf dist coverage",
     "compile": "tsc -p tsconfig.build.json",
     "lint": "eslint ./ --ext .js,.ts,.tsx --quiet --fix",
-    "test": "jest --ci --config ../../jest.config.json ",
+    "test": "jest --runInBand",
+    "test:cov": "rimraf -rf ./coverage && jest --ci --runInBand --coverage",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
